--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,85 @@
+###############################################
+#        MACHINE LEARNING PROJECT IGNORE       #
+###############################################
+
+# --------------------------------------------
+# DATASETS (Never push large files to GitHub)
+# --------------------------------------------
+data/
+datasets/
+*.csv
+*.tsv
+*.xlsx
+*.json
+*.xml
+*.zip
+*.gz
+
+# Raw or processed data
+*.feather
+*.parquet
+*.pickle
+*.joblib
+
+# --------------------------------------------
+# MODEL FILES (Too large for GitHub)
+# --------------------------------------------
+*.pkl
+*.pt
+*.pth
+*.h5
+*.tflite
+*.onnx
+
+# Model folders
+models/
+saved_models/
+checkpoints/
+artifacts/
+
+# --------------------------------------------
+# NOTEBOOK JUNK
+# --------------------------------------------
+.ipynb_checkpoints/
+
+# --------------------------------------------
+# PYTHON CACHE
+# --------------------------------------------
+_pycache_/
+*.pyc
+*.pyo
+
+# --------------------------------------------
+# LOGS AND TEMP FILES
+# --------------------------------------------
+logs/
+*.log
+*.tmp
+
+# --------------------------------------------
+# ENVIRONMENTS
+# --------------------------------------------
+.env
+.venv
+env/
+venv/
+
+# --------------------------------------------
+# OS FILES
+# --------------------------------------------
+.DS_Store
+Thumbs.db
+
+# --------------------------------------------
+# IDE / EDITOR SETTINGS
+# --------------------------------------------
+.vscode/
+.idea/
+
+###############################################
+# END OF ML PROJECT IGNORE TEMPLATE
+###############################################
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
